# Changelog
All notable changes to this project will be documented in this file.

The format is based on [Keep a Changelog](https://keepachangelog.com/en/1.0.0/),
and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0.html).

## Unreleased
### Removed
- [PYTHON] [IMPORTS] useless 'yaml' import in frontend's models.py

## [2.5.3] - 2023-04-03
### Fixed
- [API_PARSER] [TRENDMICRO_VISIONONE] fix format of logs and update of timestamp
- [API_PARSER] [CYBEREASON] Delay request at the API by 5 minutes


## [2.5.2] - 2023-03-24
### Fixed
- [PORTAL] Include URL's query parameters during portal redirections
### Changed
- [SETTINGS] Adapt pymongo database settings to v3.13
### Added
- [REQUIREMENTS] New files requirements.in (application requirements) and requirements.txt (fixed version requirements)


## [2.5.1] - 2023-03-17
### Fixed
- [FRONTEND] [FORM] Add missing attribute 'trendmicro_visionone_token' for Frontend edition


## [2.5.0] - 2023-03-16
### Added
- [API_PARSER] New parser Trendmicro Visionone
- [API_PARSER] [MS_SENTINEL] Add 'entities' to the logs
### Fixed
- [API_PARSER] [NETSKOPE] Fix infinite loop when there is no log
- [SYSTEM] [RSYSLOG] Only restart Rsyslog when everything has been (re)built


## [2.4.2] - 2023-03-03
### Fixed
- [PORTAL] Allow tokens obtained from an application portal to pass the portal when token is supplied through headers


## [2.4.1] - 2023-03-01
### Added
- [API_PARSER] [LOGGING] Add Process PID to parsers' logs
### Fixed
- [API_PARSER] Regularly scan processes to join to avoid accumulating zombies
- [CONFIG] [PF] Update PF configurations when whitelist/blacklist entries are changed on GUI
- [GUI/API] [NETWORK] API configuration didn't work as expected
- [GUI/API] [NETWORK] Small corrections to internal functions and data types
- [CONFIG] [FILEBEAT] Correctly remove filebeat configuration files when removing a filebeat Frontend
- [RSYSLOG] Only restart service once after modifying configuration files