@@ -7,6 +7,7 @@ and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0
 ## Unreleased
 ### Removed
 - [PYTHON] [IMPORTS] useless 'yaml' import in frontend's models.py
+- [PYTHON] [REQUIREMENTS] replace python-oauth2's uuid generation with built-in uuid lib
 
 ## [2.5.3] - 2023-04-03
 ### Fixed
